feat: Use Spring integration PoC - Meeds-io/MIPs#57