@@ -21,6 +21,8 @@ package io.meeds.poll.storage;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.springframework.stereotype.Service;
+
 import io.meeds.poll.dao.PollDAO;
 import io.meeds.poll.dao.PollOptionDAO;
 import io.meeds.poll.dao.PollVoteDAO;
@@ -32,7 +34,9 @@ import io.meeds.poll.model.PollOption;
 import io.meeds.poll.model.PollVote;
 import io.meeds.poll.utils.EntityMapper;
 
+@Service
 public class PollStorage {
+
   private PollDAO       pollDAO;
 
   private PollOptionDAO pollOptionDAO;
@@ -62,7 +66,7 @@ public class PollStorage {
 
   public List<PollOption> getPollOptionsByPollId(long pollId) {
     List<PollOptionEntity> pollOptionEntities = pollOptionDAO.findPollOptionsByPollId(pollId);
-    return pollOptionEntities.stream().map(EntityMapper::fromPollOptionEntity).collect(Collectors.toList());
+    return pollOptionEntities.stream().map(EntityMapper::fromPollOptionEntity).toList();
   }
 
   public Poll updatePoll(Poll poll) {
